@@ -17,6 +17,8 @@
 ----------------------------------------------------------------------------------------------------------------------
 Version: 2.x
 Date:
+    Features:
+        - Focus the built count and fixed count edit boxes when first opening them.
     Bugfixes:
         - Recipes no longer have excessive question marks in their names
 ----------------------------------------------------------------------------------------------------------------------
